# reasoning-agent

./: .env.example  .gitignore  Dockerfile  README.md  RUN_COMMANDS.md  hackathon_init.md  main.py  pyproject.toml  quick_demo.py  report_.md  report_report_20260610_181731.md  report_report_20260610_181815.md  requirements.txt  run_agent.py  workflow.py
.github/workflows/: azure-deploy.yml
docs/: architecture.md  deployment.md  foundry_setup.md  hackathonAlignment.md
logos/: cli.py  config.py
logos/hitl/: questioner.py
logos/memory/: store.py
research-to-report-multi-agent/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
research-to-report-multi-agent/src/: __init__.py
research-to-report-multi-agent/src/a2a/: protocol.py
research-to-report-multi-agent/src/orchestration/: research_workflow.py
research-to-report-multi-agent/src/utils/: logging.py  run_model.py
research-to-report-multi-agent/tests/: test_agents.py
scripts/: run_a2a_server.py  run_sample.py  verify_deployment.py
src/: __init__.py  main.py
src/a2a/: __init__.py  client.py  server.py
src/agents/: __init__.py  analyst.py  competitive_analysis.py  planner.py  researcher.py  test_custom_credential.py  trend_scanner.py  writer.py
src/foundry/: __init__.py  client.py
src/mcp_tools/: __init__.py  azure_web_search.py  web_search.py
src/orchestration/: __init__.py  research_workflow.py
src/utils/: __init__.py  config.py  logging.py  run_model.py
tests/: __init__.py  test_agents.py  test_api.py  test_dynamic_status.py
