# LOGOS — Autonomous Research Intelligence Agent
# PyPI package: pip install logos-research
# CLI command:  logos

[project]
name = "logos-research"
version = "1.0.2"
description = "LOGOS — Autonomous Research Intelligence Agent. 6-agent AI research pipeline with persistent memory, human-in-the-loop clarifications, and story-driven CLI."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Raj", email = "raj@example.com"}
]
keywords = [
    "ai", "research", "agents", "azure", "foundry",
    "nlp", "intelligence", "cli", "memory", "langgraph"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]

dependencies = [
    "rich>=13.7.0",
    "python-dotenv>=1.0.1",
    "openai>=1.0.0",
    "azure-identity>=1.17.0",
    "azure-ai-projects>=2.0.0",
    "azure-ai-agents>=1.0.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "httpx>=0.27.0",
    "json-repair>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "black>=24.10.0",
    "pre-commit>=4.0.0",
    "build>=1.2.0",
    "twine>=5.0.0",
]

# ── CLI entry point ────────────────────────────────────────────────────────────
# After `pip install logos-research`, the user runs: logos
[project.scripts]
logos = "logos.cli:main"

# ── Package discovery ──────────────────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["logos", "src"]

[tool.hatch.build.targets.sdist]
include = [
    "logos/**",
    "src/**",
    "README.md",
    "pyproject.toml",
    ".env.example",
]
exclude = [
    "*.sqlite",
    "report_*.md",
    ".env",
    "__pycache__",
    "*.pyc",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ── Linting ────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310"]

# ── PyPI publishing instructions (for later) ──────────────────────────────────
# 1. Build:   python -m build
# 2. Check:   twine check dist/*
# 3. Test:    twine upload --repository testpypi dist/*
# 4. Publish: twine upload dist/*